--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="/assests/css/index.css">
-    <link rel="stylesheet" href="/assests/css/responsive.css">
+    <link rel="stylesheet" href="/css/index.css">
+    <link rel="stylesheet" href="/css/responsive.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-    <!-- <link rel="stylesheet" href="/assests/css/theme.css" id="themeCss"> -->
+    <!-- <link rel="stylesheet" href="/css/theme.css" id="themeCss"> -->
     <script src="https://kit.fontawesome.com/52520e14d5.js" crossorigin="anonymous" defer></script>
-    <!-- <script src="/assests/js/theme.js" defer></script> -->
-    <script src="/assests/js/menuFilter.js" defer></script>
-    <script src="/assests/js/slider.js" defer></script>
-    <script src="./assests/js/scroll.js" defer></script>
+    <!-- <script src="//js/theme.js" defer></script> -->
+    <script src="/js/menuFilter.js" defer></script>
+    <script src="/js/slider.js" defer></script>
+    <script src="./js/scroll.js" defer></script>
     <title>Feel The Taste</title>
 </head>
 <body>
