--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- <script src="js/theme.js" defer></script> -->
     <script src="js/menuFilter.js" defer></script>
     <script src="js/slider.js" defer></script>
-    <script src=".js/scroll.js" defer></script>
+    <script src="js/scroll.js" defer></script>
     <title>Feel The Taste</title>
 </head>
 <body>
@@ -42,7 +42,7 @@
         </div>
         <nav>
             <div class="nav navBar">
-                <img src="/images/white-logo.png" id="logo">
+                <img src="images/white-logo.png" id="logo">
                 <div class="nav-buttons">
                     <a href="header" class="navLink current">Home</a>
                     <a href="story" class="navLink">Our Story</a>
@@ -53,7 +53,7 @@
                 </div>
             </div>
             <div class="smallNav navBar">
-                <img src="/images/white-logo.png" id="smallLogo">
+                <img src="images/white-logo.png" id="smallLogo">
                 <div class="nav-buttons" id="navBtn">
                     <a href="header" class="navLink current">Home</a>
                     <a href="story" class="navLink">Our Story</a>
@@ -93,7 +93,7 @@
                         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquid, aspernatur quibusdam voluptate ullam quam mollitia error beatae officia repudiandae. Architecto dolorum quod incidunt nobis maxime dolorem sed voluptates dignissimos iure optio porro, sapiente quas alias harum repellat perferendis deleniti asperiores qui, doloribus pariatur obcaecati culpa corrupti accusantium quis.
                     </div>
                 </div>
-                <img src="/images/story.jpg" class="storyImage">
+                <img src="images/story.jpg" class="storyImage">
             </div>
         </section>
         <section id="menu" class="section">
@@ -109,7 +109,7 @@
                 </div>
                 <div class="foodItems">
                     <div class="foodItem breakfast dinner">
-                        <img src="/images/food/bread omlet.jpg">
+                        <img src="images/food/bread omlet.jpg">
                         <div class="foodText">
                             <h3>
                                 Bread Omlet
@@ -133,7 +133,7 @@
                         </div>
                     </div>
                     <div class="foodItem sweet snacks">
-                        <img src="/images/food/cake.jpg">
+                        <img src="images/food/cake.jpg">
                         <div class="foodText">
                             <h3>
                                 Puff Cake
@@ -157,7 +157,7 @@
                         </div>
                     </div>
                     <div class="foodItem breakfast">
-                        <img src="/images/food/chocolate coffee.jpg">
+                        <img src="images/food/chocolate coffee.jpg">
                         <div class="foodText">
                             <h3>
                                 Chocolate Coffee
@@ -181,7 +181,7 @@
                         </div>
                     </div>
                     <div class="foodItem dinner lunch">
-                        <img src="/images/food/fish.jpg">
+                        <img src="images/food/fish.jpg">
                         <div class="foodText">
                             <h3>
                                 Tomato Fish
@@ -205,7 +205,7 @@
                         </div>
                     </div>
                     <div class="foodItem sweet lunch lastList">
-                        <img src="/images/food/fruit pancake.jpg">
+                        <img src="images/food/fruit pancake.jpg">
                         <div class="foodText">
                             <h3>
                                 Fruit Pancake
@@ -229,7 +229,7 @@
                         </div>
                     </div>
                     <div class="foodItem breakfast dinner lastList">
-                        <img src="/images/food/omlet.jpg">
+                        <img src="images/food/omlet.jpg">
                         <div class="foodText">
                             <h3>
                                 Omlet
@@ -253,7 +253,7 @@
                         </div>
                     </div>
                     <div class="foodItem lunch dinner lastList">
-                        <img src="/images/food/salad dish.jpg">
+                        <img src="images/food/salad dish.jpg">
                         <div class="foodText">
                             <h3>
                                 Salad Dish
@@ -277,7 +277,7 @@
                         </div>
                     </div>
                     <div class="foodItem sweet snacks lastList">
-                        <img src="/images/food/vanilla cake.jpg">
+                        <img src="images/food/vanilla cake.jpg">
                         <div class="foodText">
                             <h3>
                                 Vanilla Cake
@@ -430,7 +430,7 @@
         </section>
         <section id="lowerFooter">
             <div class="img">
-                <img src="./images/logo.png">
+                <img src="images/logo.png">
             </div>
             <div class="footIcons">
                 <i class="fa-brands fa-facebook"></i>
