--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <a href="header" class="navLink current">Home</a>
                     <a href="story" class="navLink">Our Story</a>
                     <a href="menu" class="navLink">Menu</a>
-                    <a href="bookATable" class="navLink">Book A Table</a>
+                    <a href="bookATable" class="navLink">Book Table</a>
                     <a href="gallarySlider" class="navLink">Gallery</a>
                     <a href="mainFooter" class="navLink">Location</a>
                 </div>
