--- a/index.html
+++ b/index.html
@@ -42,18 +42,18 @@
         </div>
         <nav>
             <div class="nav navBar">
-                <img src="images/white-logo.png" id="logo">
+                <img src="./images/white-logo.png" id="logo">
                 <div class="nav-buttons">
                     <a href="header" class="navLink current">Home</a>
                     <a href="story" class="navLink">Our Story</a>
                     <a href="menu" class="navLink">Menu</a>
-                    <a href="bookATable" class="navLink">Book Table</a>
+                    <a href="bookATable" class="navLink">Book A Table</a>
                     <a href="gallarySlider" class="navLink">Gallery</a>
                     <a href="mainFooter" class="navLink">Location</a>
                 </div>
             </div>
             <div class="smallNav navBar">
-                <img src="images/white-logo.png" id="smallLogo">
+                <img src="./images/white-logo.png" id="smallLogo">
                 <div class="nav-buttons" id="navBtn">
                     <a href="header" class="navLink current">Home</a>
                     <a href="story" class="navLink">Our Story</a>
